Add thickness function

--- a/src/Mod/Part/Gui/Resources/Part.qrc
+++ b/src/Mod/Part/Gui/Resources/Part.qrc
@@ -27,6 +27,7 @@
         <file>icons/Part_ShapeInfo.svg</file>
         <file>icons/Part_Sphere.svg</file>
         <file>icons/Part_Sweep.svg</file>
+        <file>icons/Part_Thickness.svg</file>
         <file>icons/Part_Torus.svg</file>
         <file>icons/preferences-part_design.svg</file>
         <file>icons/Tree_Part.svg</file>
