--- a/src/Mod/PartDesign/Gui/Resources/PartDesign.qrc
+++ b/src/Mod/PartDesign/Gui/Resources/PartDesign.qrc
@@ -2,6 +2,7 @@
     <qresource> 
         <file>icons/PartDesign_Chamfer.svg</file>
         <file>icons/PartDesign_Fillet.svg</file>
+	<file>icons/PartDesign_Draft.svg</file>
         <file>icons/PartDesign_Groove.svg</file>
         <file>icons/PartDesign_Pad.svg</file>
         <file>icons/PartDesign_Pocket.svg</file>
