Add icons for sketcher commands

--- a/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
+++ b/src/Mod/Sketcher/Gui/Resources/Sketcher.qrc
@@ -62,8 +62,10 @@
         <file>icons/Sketcher_Trimming.svg</file>
         <file>icons/Sketcher_External.svg</file>
         <file>icons/Sketcher_LeaveSketch.svg</file>
+        <file>icons/Sketcher_MapSketch.svg</file>
         <file>icons/Sketcher_NewSketch.svg</file>
         <file>icons/Sketcher_Sketch.svg</file>
+        <file>icons/Sketcher_ViewSketch.svg</file>
         <file>icons/Sketcher_AlterConstruction.svg</file>
         <file>translations/Sketcher_af.qm</file>
         <file>translations/Sketcher_de.qm</file>
