--- a/src/Mod/PartDesign/Gui/TaskLinearPatternParameters.ui
+++ b/src/Mod/PartDesign/Gui/TaskLinearPatternParameters.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>225</width>
+    <width>260</width>
     <height>402</height>
    </rect>
   </property>
@@ -31,17 +31,30 @@
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <item>
-      <widget class="QToolButton" name="buttonReference">
+      <widget class="QLabel" name="labelDirection">
        <property name="text">
         <string>Direction</string>
-       </property>
-       <property name="checkable">
-        <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QLineEdit" name="lineReference"/>
+      <widget class="QComboBox" name="comboDirection">
+       <item>
+        <property name="text">
+         <string>Horizontal sketch axis</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Vertical sketch axis</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Select reference...</string>
+        </property>
+       </item>
+      </widget>
      </item>
     </layout>
    </item>
@@ -68,9 +81,6 @@
        </property>
        <property name="maximum">
         <double>999999.000000000000000</double>
-       </property>
-       <property name="singleStep">
-        <double>5.000000000000000</double>
        </property>
        <property name="value">
         <double>100.000000000000000</double>
