Add ViewSelection and Jims Icon. Some fixes

--- a/src/Mod/Fem/Gui/TaskObjectName.ui
+++ b/src/Mod/Fem/Gui/TaskObjectName.ui
@@ -19,7 +19,7 @@
      <item>
       <widget class="QLineEdit" name="lineEdit_ObjectName">
        <property name="readOnly">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
       </widget>
      </item>
