--- a/src/Mod/Fem/Gui/Resources/Fem.qrc
+++ b/src/Mod/Fem/Gui/Resources/Fem.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource> 
         <file>icons/Fem_FemMesh.svg</file>
+        <file>icons/Fem_FemMesh_createnodebypoly.svg</file>
         <file>translations/Fem_af.qm</file>
         <file>translations/Fem_de.qm</file>
         <file>translations/Fem_fi.qm</file>
