0001074: Draft Ellipse tool
The Draft module now features an Ellipse tool
that creates a Part Ellipse object.

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -54,6 +54,7 @@
         <file>icons/Snap_Near.svg</file>
         <file>icons/Draft_Clone.svg</file>
         <file>icons/Draft_Heal.svg</file>
+        <file>icons/Draft_Ellipse.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
