--- a/src/Mod/Draft/Resources/ui/userprefs-import.ui
+++ b/src/Mod/Draft/Resources/ui/userprefs-import.ui
@@ -281,6 +281,26 @@ If color mapping is choosed, you must choose a color mapping file containing a t
        </layout>
       </item>
       <item>
+       <layout class="QHBoxLayout" name="horizontalLayout_14">
+        <item>
+         <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox_12">
+          <property name="toolTip">
+           <string>If this is checked, the exported objects will be projected to reflect the current view direction</string>
+          </property>
+          <property name="text">
+           <string>Project exported objects along current view direction</string>
+          </property>
+          <property name="prefEntry" stdset="0">
+           <cstring>dxfproject</cstring>
+          </property>
+          <property name="prefPath" stdset="0">
+           <cstring>Mod/Draft</cstring>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </item>
+      <item>
        <layout class="QHBoxLayout" name="horizontalLayout_11">
         <item>
          <widget class="Gui::PrefCheckBox" name="gui::prefcheckbox_8">
