Add Draft.ShapeString Gui tool and makeShapeString function

--- a/src/Mod/Draft/Resources/Draft.qrc
+++ b/src/Mod/Draft/Resources/Draft.qrc
@@ -55,6 +55,7 @@
         <file>icons/Draft_Clone.svg</file>
         <file>icons/Draft_Heal.svg</file>
         <file>icons/Draft_Ellipse.svg</file>
+        <file>icons/Draft_ShapeString.svg</file>
         <file>patterns/concrete.svg</file>
         <file>patterns/cross.svg</file>
         <file>patterns/line.svg</file>
