--- a/src/Mod/Arch/Resources/Arch.qrc
+++ b/src/Mod/Arch/Resources/Arch.qrc
@@ -30,6 +30,7 @@
         <file>icons/Arch_Check.svg</file>
         <file>icons/Arch_SelectNonManifold.svg</file>
         <file>icons/Arch_MergeWalls.svg</file>
+        <file>icons/Arch_Wall_Tree_Assembly.svg</file>
         <file>ui/archprefs-base.ui</file>
         <file>translations/Arch_af.qm</file>
         <file>translations/Arch_de.qm</file>
