wiering the tet dialog

--- a/src/Mod/Fem/Gui/TaskTetParameter.ui
+++ b/src/Mod/Fem/Gui/TaskTetParameter.ui
@@ -30,7 +30,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
+      <widget class="QDoubleSpinBox" name="doubleSpinBox_MaxSize"/>
      </item>
     </layout>
    </item>
